--- a/assets/scss/page/_services.scss
+++ b/assets/scss/page/_services.scss
@@ -282,6 +282,7 @@
   .our-services {
     border-radius: 0px !important;
     margin: 0px !important;
+    margin-bottom: 65px !important;
     .shape {
       .bottom {
         bottom: -35px;
